--- a/Spam-classifier.ipynb
+++ b/Spam-classifier.ipynb
@@ -365,9 +365,9 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/ravindra/nltk_data...\n",
+      "[nltk_data]     /Users/gaurav/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /Users/ravindra/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /Users/gaurav/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
